# qa_guru_python_18_hw_16

poetry_project/: pyproject.toml
